# TuskVector

./: .gitignore  README.md  index.html  lab.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: codeql.yml  python-publish.yml
backend/: __init__.py  api_key_service.py  database.py  ecosystem.config.js  embeddings_router.py  items_router.py  llm_router.py  main.py  rate_limiter.py  schemas.py
frontend/: index.html  lab.html  testlab.html
frontend/app/: page.tsx
unit_tests/: conftest.py  test_embeddings.py  test_llm.py
