[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuskvector"
version = "1.0.1"
description = "TuskVector API Platform"
authors = [{name = "Niklas", email = "api.tuskvector@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "pgvector",
    "python-dotenv",
    "openai",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"tuskvector" = "backend"}
packages = ["tuskvector"]
